# SpiceBot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-poetry.yml
