[tool.poetry]
name = "SpiceBot"
version = "0.1.0"
description = "SpiceBot: It exists!"

license = "GPL-3.0"
readme = 'README.md'
repository = "https://github.com/pandaboylol8/SpiceBot"
homepage = "https://github.com/pandaboylol8/SpiceBot"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
