[tool.poetry]
name = "SpiceBot"
version = "0.1.0"
description = ""
authors = ["regulad <52430642+regulad@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
