[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["regulad <52430642+regulad@users.noreply.github.com>"]
description = ""
license = "GPL-3.0"
name = "SpiceBot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0.1"
python = "^3.8"
[tool.poetry.dev-dependencies]
